<resources>
    <string name="app_name">Quiz App</string>
    <string name="role">Role</string>
    <string name="example_email">user@example.com</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description1">Description: </string>
    <string name="button_add">ADD</string>
    <string name="creating_account">"Creating… "</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button_register">REGISTER</string>
    <string name="verifying">Verifying %d %%</string>
    <string name="loading_dot">Loading…</string>
    <string name="button_login">LOGIN</string>
    <string name="dont_have_an_account_sign_up_now">don\'t have an account sign up now</string>
    <string name="button_update">UPDATE</string>
    <string name="details">Details</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="no_note_available">No note available</string>
    <string name="creating">Creating %d %%</string>
    <string name="edit">EDIT</string>
    <string name="loading">Loading %d %%</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="icon">Icon</string>
    <string name="icon_text">Icon Text</string>
    <string name="you_want_to_log_out">You want to log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="you_want_to_delete_this_note_naction_cannot_be_undone">You want to delete this note? \nAction cannot be undone.</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="dashboard">Dashboard</string>
    <string name="quiz">Quiz</string>
    <string name="question">Question</string>
    <string name="publish_date">Publish Date:  </string>
    <string name="expiry_date">Expiry Date:  </string>
    <string name="date">YYYY-MM-DD</string>
    <string name="access_quiz">Access Quiz</string>
    <string name="welcome">Welcome</string>
    <string name="access">Access</string>
    <string name="invalid_details">Invalid Access ID, Please contact your teacher!</string>
    <string name="result">Result</string>
    <string name="top_ranking">Top 10 Ranking</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
    <string name="upload">Upload</string>
    <string name="submit">Submitting %d %%</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="completed_quiz">You have already completed this quiz</string>
    <string name="state">"State: "</string>
    <string name="authentication">Authentication…</string>
    <string name="access_id">"AccessID: "</string>
    <string name="todo">TODO</string>
    <string name="upload_questions">Upload Questions:</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="create_quiz_now">Create Quiz Now</string>
    <string name="select_expiry_date">Select Expiry Date</string>
    <string name="select_publish_date">Select Publish Date</string>
    <string name="enter_quiz_description">Enter quiz description</string>
    <string name="enter_quiz_title">Enter quiz title</string>
    <string name="quiz_title">Quiz Title:</string>
    <string name="_123456">123456</string>
    <string name="quiztitle">Quiz Title</string>
    <string name="time">Time:</string>
    <string name="_00_30">00:30</string>
    <string name="next">Next</string>
    <string name="enter_id">Enter ID</string>
    <string name="first_place">First Place</string>
    <string name="_1000">1000</string>
    <string name="second_place">Second Place</string>
    <string name="third_place">Third Place</string>
    <string name="no_ranking_available">No Ranking Available</string>
    <string name="no_quizzes_available">No quizzes Available</string>
    <string name="manage_quiz">Manage Quiz</string>
    <string name="n_a">N/A</string>
</resources>