<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvQuizTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz"
                android:textSize="18sp"
                android:textStyle="bold" />

<!--            <TextView-->
<!--                android:id="@+id/tvQuizDescription"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/description"-->
<!--                android:textSize="14sp" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_date"
                android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvPublishDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry_date"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvExpiryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivEdit"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/xxxxs"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_edit" />

                <ImageView
                    android:id="@+id/ivDelete"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/xxxxs"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_delete" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
