<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.screens.teacher.addEditView.view.CheckQuizViewFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_marginTop="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/xl"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description1"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <ImageView
                android:id="@+id/btnEdit"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical3"
                app:layout_constraintTop_toTopOf="@+id/tvTitle" />


            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_date"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/tvPublishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/tvExpiryDate"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_date"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvExpiryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/tvQuizState"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvQuizState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/tvAccessId"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical1" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_id"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/tvAccessId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123456"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical1" />

            <ImageView
                android:id="@+id/btnCopyAccessId"
                android:layout_width="16sp"
                android:layout_height="16sp"
                android:src="@drawable/ic_content_copy"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical2"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvQuestion"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/m"
                android:layout_marginTop="@dimen/m"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal3" />

            <androidx.cardview.widget.CardView
                android:id="@+id/loading_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:layout_width="60sp"
                        android:layout_height="60sp"
                        android:indeterminateTint="@color/gray" />

                    <TextView
                        android:id="@+id/tvLoadingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:text="@string/loading"
                        android:textColor="@color/gray"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.02" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.31" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.38" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>